tests/outref/TCF017.ref

-- TCF017 : OCTO345 : Single error output for nested erroneous function calls

CREATE FUNCTION LENGTH(VARCHAR) RETURNS INTEGER AS $$^LENGTH;

SELECT ABS(ABS(1, 2)) FROM names;
SELECT ABS(ABS(ABS(1, 2))) FROM names;

SELECT LENGTH(LENGTH(1, 2)) FROM names;
SELECT LENGTH(LENGTH(LENGTH(1, 2))) FROM names;

CREATE FUNCTION
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'ABS' defined with given parameter types (INTEGER, INTEGER)
Error with syntax near (line 1, column 12):

SELECT ABS(ABS(1, 2)) FROM names;
           ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT ABS(ABS(1, 2)) FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'ABS' defined with given parameter types (INTEGER, INTEGER)
Error with syntax near (line 1, column 16):

SELECT ABS(ABS(ABS(1, 2))) FROM names;
               ^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT ABS(ABS(ABS(1, 2))) FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'LENGTH' defined with given parameter types (INTEGER, INTEGER)
Error with syntax near (line 1, column 15):

SELECT LENGTH(LENGTH(1, 2)) FROM names;
              ^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT LENGTH(LENGTH(1, 2)) FROM names;
[ERROR] PATH:LINENUM DATE TIME : ERR_UNKNOWN_FUNCTION : No function 'LENGTH' defined with given parameter types (INTEGER, INTEGER)
Error with syntax near (line 1, column 22):

SELECT LENGTH(LENGTH(LENGTH(1, 2))) FROM names;
                     ^^^^^^
[ERROR] PATH:LINENUM DATE TIME : ERR_PARSING_COMMAND : Error parsing statement: SELECT LENGTH(LENGTH(LENGTH(1, 2))) FROM names;
